--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tabs/tabs.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tabs/tabs.component.html
@@ -15,7 +15,7 @@
 
   <div id="app-content" class="panel-body">
     <notification></notification>
-    <div class="tab-content container-fluid">
+    <div id="body-content" class="tab-content container-fluid">
       <ng-content></ng-content>
     </div>
   </div>
