--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-chat/category-chat.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-chat/category-chat.component.html
@@ -11,13 +11,49 @@
     </div>
     <div class="body-content flex-row">
         <section class="sidebar">
-            <fab-nav [groups]="groups" [styles]="styles"></fab-nav>
+            <fab-nav [groups]="groups" [styles]="styles" [initialSelectedKey]='initialSelectedKey'></fab-nav>
         </section>
         <section class="content">
             <router-outlet></router-outlet>
         </section>
     </div>
 </div>
+
+    <!-- <div *ngFor="let category of allProblemCategories;let i = index">
+        <collapsible-list [title]="category.Name" [collapsed]="category.Collapsed" *ngIf="(category.Subcategories | toolstack:AppStack | platformfilter:platform  | apptype:appType).length > 0">
+            <collapsible-list-item>
+                <div class="col zoomIn animated category-box" 
+                    *ngFor="let subcategory of category.Subcategories | toolstack:AppStack | platformfilter:platform | apptype:appType" [style.background-color]="category.BgColor" [style.color]="category.TextColor"
+                    [routerLink]="[subcategory.Href]" (click)="logCategorySelected(subcategory.Name)">
+                    <div class="category-content">{{subcategory.Name}}</div>
+                </div>
+            </collapsible-list-item>
+            <div *ngIf="category.Name ==='Diagnostic Tools'" class="area">
+                <div class="content">
+                    Showing tools for
+                    <strong>{{ AppStack }}</strong>.
+                    <div style="display:inline-block" class="dropup">
+                        <a class="dropdown-toggle" (click)="showToolsDropdown = !showToolsDropdown">Change Stack</a>
+                        <ul class="dropdown-menu" style="cursor: pointer" aria-labelledby="dropdownMenu1" [ngClass]="{'show': showToolsDropdown ===
+                    true, 'hide': showToolsDropdown === false}">
+                            <li (click)="onStackChanged('ASP.Net')">
+                                <a>ASP.Net</a>
+                            </li>
+                            <li (click)="onStackChanged('ASP.Net Core')">
+                                <a>ASP.NET Core</a>
+                            </li>
+                            <li (click)="onStackChanged('Java')">
+                                <a>Java</a>
+                            </li>
+                            <li (click)="onStackChanged('PHP')">
+                                <a>PHP</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </collapsible-list>
+    </div> -->
 <!-- <div class="chat-container">
     <div>
         <support-bot [startingKey]="startingKey"></support-bot>
