--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-tile/category-tile.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-tile/category-tile.component.html
@@ -1,18 +1,20 @@
 <div class="category-container" (click)="navigateToCategory()" (keyup.enter)="navigateToCategory()"
   (keyup.space)="navigateToCategory()" tabindex="0" role="button">
-  <div class="title-container" [style.background-color]="category.color">
+  <!-- <div class="title-container" [style.background-color]="category.color">
     {{category.name}}
-  </div>
-  <div class="category-body">
-    <p>{{category.description}}</p>
-    <div>
-        <span class="keyword-label">Keywords</span>
-        <div class="keywords">
+  </div> -->
+  <!-- <div class="category-body"> -->
+  <div>
+    <div class="image-container"><img [src]="categoryImgPath" /></div>
+    <h2 class="category-title">{{category.name}}</h2>
+    <p class="category-description">{{category.description}}</p>
+    <!-- <div> -->
+    <!-- <span class="keyword-label">Keywords</span> -->
+    <!-- <div class="keywords">
           <div class="keyword" [style.border-color]="category.color" *ngFor="let keyword of category.keywords">
             {{keyword}}
           </div>
-        </div>
-      </div>
+        </div> -->
+    <!-- </div> -->
   </div>
-
 </div>
