--- a/AngularApp/projects/diagnostic-data/src/lib/components/highcharts-graph/highcharts-graph.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/highcharts-graph/highcharts-graph.component.scss
@@ -11,3 +11,11 @@ hr {
     margin-top: 0px;
     margin-bottom: 0px;
 }
+
+.highcharts-container {
+    overflow: visible !important;
+  }
+
+  .highcharts-container svg {
+    overflow: visible !important;
+  }
