change style in category overview page

--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/category-overview/category-overview.component.html
@@ -1,4 +1,30 @@
-<p>
+<!-- <p>
   This is the overview page of category: <br />
   <b> {{categoryId}}</b>
-</p>
+</p> -->
+<!-- <div style="margin: 0px -10px;">
+  <support-bot startingKey="welcome-WindowsAvailabilityAndPerformance"></support-bot>
+</div> -->
+<div class="category-container">
+  <div>
+    <h3 class="category-title">Availability and performance</h3>
+    <p class="category-description">Explore this overview to discover any application or platform issues that may affect
+      your app's high availability. You can also drill down on an area by selecting a topic in the side navigation</p>
+  </div>
+
+  <div style="margin: 15px 0px">
+    <img src="../../../../assets/img/genie.svg">
+    <span>Ask Genie</span>
+    <span class="fa status-icon fa-info-circle" style="margin-left: 5px;"></span>
+  </div>
+
+  <div class="search-box">
+    <fab-search-box placeholder="Search"></fab-search-box>
+  </div>
+
+  <health-check-v3></health-check-v3>
+  <p style="font-size: 12px;">Are you looking for something else ?</p>
+  <div class="search-box">
+    <fab-search-box placeholder="Search"></fab-search-box>
+  </div>
+</div>
